add eslint for run build

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "start": "node dist/src/index.js",
     "debug": "node --max_old_space_size=4096 --inspect-brk ./dist/src/index.js",
     "eslint-fix": "eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/ --fix",
-    "eslint": "eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/",
-    "build": "tsc && cp -R src/templates dist/src",
+    "eslint": "eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/ --quiet",
+    "build": "npm run eslint && tsc && cp -R src/templates dist/src",
     "start-testserver": "./node_modules/.bin/start-autorest-testserver",
     "stop-testserver": "./node_modules/.bin/stop-autorest-testserver",
     "watch": "tsc -p . --watch",
