add lintball for python formatting

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "node --max_old_space_size=4096 --inspect-brk ./dist/src/index.js",
     "eslint-fix": "eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/ --fix",
     "eslint": "eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/ --quiet",
+    "prebuild": "./node_modules/.bin/lintball install-tools py",
     "build": "npm run eslint && tsc && cp -R src/templates dist/src",
     "start-testserver": "./node_modules/.bin/start-autorest-testserver",
     "stop-testserver": "./node_modules/.bin/stop-autorest-testserver",
@@ -70,6 +71,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "js-yaml": "^3.13.1",
     "jszip-sync": "^3.2.1-sync",
+    "lintball": "^1.1.10",
     "node-yaml": "^3.2.0",
     "nunjucks": "^3.2.2",
     "prettier": "^2.2.1",
