--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "debug": "node --max_old_space_size=4096 --inspect-brk ./dist/src/index.js",
     "eslint-fix": "eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/ --fix",
     "eslint": "eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/ --quiet",
-    "prebuild": "./node_modules/.bin/lintball install-tools py",
+    "postinstall": "./node_modules/.bin/lintball install-tools py",
     "build": "npm run eslint && tsc && cp -R src/templates dist/src",
     "start-testserver": "./node_modules/.bin/start-autorest-testserver",
     "stop-testserver": "./node_modules/.bin/stop-autorest-testserver",
