--- a/azure-pipelines/ci.yml
+++ b/azure-pipelines/ci.yml
@@ -12,6 +12,14 @@ jobs:
     pool:
       vmImage: 'vs2017-win2016'
     steps:
+      - task: NodeTool@0
+        inputs:
+          versionSpec: '$(NodeVersion)'
+        displayName: 'Install Node.js $(NodeVersion)'
+      - task: UsePythonVersion@0
+        displayName: 'Use Python 3.7'
+        inputs:
+          versionSpec: 3.7
       - task: Npm@1
         displayName: 'npm install'
         inputs:
@@ -28,14 +36,14 @@ jobs:
         inputs:
           versionSpec: '$(NodeVersion)'
         displayName: 'Install Node.js $(NodeVersion)'
-      - task: Npm@1
-        displayName: 'npm install'
-        inputs:
-          verbose: false
       - task: UsePythonVersion@0
         displayName: 'Use Python 3.7'
         inputs:
           versionSpec: 3.7
+      - task: Npm@1
+        displayName: 'npm install'
+        inputs:
+          verbose: false
       - script: 'npm run build'
         displayName: 'npm build'
       - script: 'npm pack'
@@ -55,14 +63,14 @@ jobs:
         inputs:
           versionSpec: '$(NodeVersion)'
         displayName: 'Install Node.js $(NodeVersion)'
-      - task: Npm@1
-        displayName: 'npm install'
-        inputs:
-          verbose: false
       - task: UsePythonVersion@0
         displayName: 'Use Python 3.7'
         inputs:
           versionSpec: 3.7
+      - task: Npm@1
+        displayName: 'npm install'
+        inputs:
+          verbose: false
       - script: 'npm run build'
         displayName: 'npm build'
       - script: 'npm run test-report'
@@ -76,6 +84,10 @@ jobs:
         inputs:
           versionSpec: '$(NodeVersion)'
         displayName: 'Install Node.js $(NodeVersion)'
+      - task: UsePythonVersion@0
+        displayName: 'Use Python 3.7'
+        inputs:
+          versionSpec: 3.7
       - task: Npm@1
         displayName: 'npm install'
         inputs:
