--- a/azure-pipelines/release.yml
+++ b/azure-pipelines/release.yml
@@ -33,7 +33,10 @@ stages:
         inputs:
           versionSpec: '$(NodeVersion)'
         displayName: 'Install Node.js'
-
+      - task: UsePythonVersion@0
+        displayName: 'Use Python 3.7'
+        inputs:
+          versionSpec: 3.7
       - task: Npm@1
         displayName: 'npm install'
         inputs:
