--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "js-yaml": "^3.13.1",
     "jszip-sync": "^3.2.1-sync",
+    "lintball": "^1.1.10",
     "node-yaml": "^3.2.0",
     "nunjucks": "^3.2.2",
     "prettier": "^2.2.1",
