--- a/azure-pipelines/ci.yml
+++ b/azure-pipelines/ci.yml
@@ -8,24 +8,34 @@ variables:
   parallelTest: 'true'
 
 jobs:
+  - job: ESLint
+    pool:
+      vmImage: 'vs2017-win2016'
+    steps:
+      - task: Npm@1
+        displayName: 'npm install'
+        inputs:
+          verbose: false
+      - script: 'node_modules\.bin\eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/'
+        displayName: 'eslint'
 
   - job: Build
     pool:
       vmImage: 'Ubuntu 16.04'
-      pythonVersion: '3.7'
+      pythonVersion: '3.6'
     steps:
       - task: NodeTool@0
         inputs:
           versionSpec: '$(NodeVersion)'
         displayName: 'Install Node.js $(NodeVersion)'
-      - task: UsePythonVersion@0
-        displayName: 'Use Python 3.7'
-        inputs:
-          versionSpec: 3.7
       - task: Npm@1
         displayName: 'npm install'
         inputs:
           verbose: false
+      - task: UsePythonVersion@0
+        displayName: 'Use Python 3.6'
+        inputs:
+          versionSpec: 3.6
       - script: 'npm run build'
         displayName: 'npm build'
       - script: 'npm pack'
@@ -39,20 +49,20 @@ jobs:
   - job: TestReport
     pool:
       vmImage: 'Ubuntu 16.04'
-      pythonVersion: '3.7'
+      pythonVersion: '3.6'
     steps:
       - task: NodeTool@0
         inputs:
           versionSpec: '$(NodeVersion)'
         displayName: 'Install Node.js $(NodeVersion)'
-      - task: UsePythonVersion@0
-        displayName: 'Use Python 3.7'
-        inputs:
-          versionSpec: 3.7
       - task: Npm@1
         displayName: 'npm install'
         inputs:
           verbose: false
+      - task: UsePythonVersion@0
+        displayName: 'Use Python 3.6'
+        inputs:
+          versionSpec: 3.6
       - script: 'npm run build'
         displayName: 'npm build'
       - script: 'npm run test-report'
@@ -66,10 +76,6 @@ jobs:
         inputs:
           versionSpec: '$(NodeVersion)'
         displayName: 'Install Node.js $(NodeVersion)'
-      - task: UsePythonVersion@0
-        displayName: 'Use Python 3.7'
-        inputs:
-          versionSpec: 3.7
       - task: Npm@1
         displayName: 'npm install'
         inputs:
