--- a/package.json
+++ b/package.json
@@ -57,11 +57,11 @@
     "del-cli": "^3.0.0"
   },
   "dependencies": {
-    "@azure-tools/async-io": "^3.0.209",
-    "@azure-tools/autorest-extension-base": "~3.1.235",
-    "@azure-tools/codegen": "^2.5.276",
+    "@azure-tools/async-io": "3.0.209",
+    "@azure-tools/autorest-extension-base": "3.1.235",
+    "@azure-tools/codegen": "2.5.276",
     "@azure-tools/codemodel": "4.13.325",
-    "@azure-tools/linq": "^3.1.232",
+    "@azure-tools/linq": "3.1.232",
     "autorest": "^3.0.6187",
     "await-exec": "^0.1.2",
     "compare-versions": "^3.6.0",
