--- a/azure-pipelines/ci.yml
+++ b/azure-pipelines/ci.yml
@@ -17,7 +17,7 @@ strategy:
       imageName: 'windows-2019'
 
 pool:
-  vmImage: ${imageName}
+  vmImage: $(imageName)
   pythonVersion: '3.6'
 
 jobs:
