--- a/azure-pipelines/ci.yml
+++ b/azure-pipelines/ci.yml
@@ -114,6 +114,8 @@ jobs:
 
   - job: Windows
     displayName: CredScan
+    pool:
+      vmImage: "windows-2019"
     steps:
       - task:  ea576cd4-c61f-48f8-97e7-a3cb07b90a6f@3
         inputs:
