--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   },
   "scripts": {
     "start": "node dist/src/index.js",
-    "poststart": "node dist/src/azlinter/azlinter.js",
+    "postinstall": "mkdirp dist && cpy python dist/ --parents && node dist/python/setup.js dist/python/install.py",
     "debug": "node --max_old_space_size=4096 --inspect-brk ./dist/src/index.js",
     "eslint-fix": "eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/ --fix",
     "eslint": "eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/ --quiet",
     "build": "npm run eslint && tsc",
-    "postbuild": "cpy templates azlinter/*.py azlinter/requirements.txt ../dist/src --cwd=src/ --parents",
+    "postbuild": "cpy templates ../dist/src --cwd=src/ --parents",
     "start-testserver": "start-autorest-testserver",
     "stop-testserver": "stop-autorest-testserver",
     "watch": "tsc -p . --watch",
