--- a/package.json
+++ b/package.json
@@ -1,83 +1,84 @@
 {
-  "name": "@autorest/az",
-  "version": "1.7.2",
-  "description": "Autorest Azure AZ extension",
-  "main": "dist/src/index.js",
-  "engines": {
-    "node": ">=10.12.0"
-  },
-  "scripts": {
-    "start": "node dist/src/index.js",
-    "debug": "node --max_old_space_size=4096 --inspect-brk ./dist/src/index.js",
-    "eslint-fix": "eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/ --fix",
-    "eslint": "eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/ --quiet",
-    "build": "npm run eslint && tsc",
-    "postbuild": "cpy templates ../dist/src --cwd=src/ --parents",
-    "start-testserver": "./node_modules/.bin/start-autorest-testserver",
-    "stop-testserver": "./node_modules/.bin/stop-autorest-testserver",
-    "watch": "tsc -p . --watch",
-    "prepare": "npm run build",
-    "test": "npm run build && mocha dist/test --recursive",
-    "test-report": "npm run build && nyc mocha dist/test --recursive",
-    "clean": "ver > nul 2>&1 nul && npm run --silent clean-cmd || npm run --silent clean-bash",
-    "clean-cmd": "if exist dist rmdir /s /q dist && exit 0 || exit 0 ",
-    "clean-bash": "rm nul && rm -rf dist && exit 0 || exit 0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Azure/autorest.az.git"
-  },
-  "keywords": [
-    "autorest",
-    "extension"
-  ],
-  "author": "Microsoft Corporation",
-  "license": "MIT",
-  "devDependencies": {
-    "@microsoft.azure/autorest.testserver": "^2.10.45",
-    "@types/chai": "^4.2.7",
-    "@types/mocha": "^5.2.5",
-    "@types/node": "10.17.0",
-    "@typescript-eslint/eslint-plugin": "^4.11.1",
-    "@typescript-eslint/parser": "^4.11.0",
-    "bufferutil": "^4.0.1",
-    "chai": "^4.2.0",
-    "eslint": "^7.16.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "mocha": "^5.2.0",
-    "mocha-typescript": "^1.1.17",
-    "node-yaml": "^3.2.0",
-    "nyc": "^15.0.0",
-    "source-map-support": "^0.5.13",
-    "typescript": "^3.7.5",
-    "utf-8-validate": "^5.0.2",
-    "cpy-cli": "^2.0.0",
-    "del-cli": "^3.0.0"
-  },
-  "dependencies": {
-    "@azure-tools/async-io": "3.0.209",
-    "@azure-tools/autorest-extension-base": "3.1.235",
-    "@azure-tools/codegen": "2.5.276",
-    "@azure-tools/codemodel": "4.13.325",
-    "@azure-tools/linq": "3.1.232",
-    "autorest": "^3.0.6336",
-    "await-exec": "^0.1.2",
-    "compare-versions": "^3.6.0",
-    "dir-compare": "^2.2.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "js-yaml": "^3.13.1",
-    "jszip-sync": "^3.2.1-sync",
-    "node-yaml": "^3.2.0",
-    "nunjucks": "^3.2.2",
-    "prettier": "^2.2.1",
-    "request": "^2.87.0",
-    "request-promise-native": "1.0.8"
-  },
-  "files": [
-    "dist"
-  ]
+    "name": "@autorest/az",
+    "version": "1.7.2",
+    "description": "Autorest Azure AZ extension",
+    "main": "dist/src/index.js",
+    "engines": {
+        "node": ">=10.12.0"
+    },
+    "scripts": {
+        "start": "node dist/src/index.js",
+        "debug": "node --max_old_space_size=4096 --inspect-brk ./dist/src/index.js",
+        "eslint-fix": "eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/ --fix",
+        "eslint": "eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/ --quiet",
+        "build": "npm run eslint && tsc",
+        "postbuild": "cpy templates ../dist/src --cwd=src/ --parents",
+        "start-testserver": "./node_modules/.bin/start-autorest-testserver",
+        "stop-testserver": "./node_modules/.bin/stop-autorest-testserver",
+        "watch": "tsc -p . --watch",
+        "prepare": "npm run build",
+        "test": "npm run build && mocha --require ts-node/register test/*.ts --recursive",
+        "test-report": "npm run build && nyc mocha --require ts-node/register test --recursive",
+        "clean": "ver > nul 2>&1 nul && npm run --silent clean-cmd || npm run --silent clean-bash",
+        "clean-cmd": "if exist dist rmdir /s /q dist && exit 0 || exit 0 ",
+        "clean-bash": "rm nul && rm -rf dist && exit 0 || exit 0"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Azure/autorest.az.git"
+    },
+    "keywords": [
+        "autorest",
+        "extension"
+    ],
+    "author": "Microsoft Corporation",
+    "license": "MIT",
+    "devDependencies": {
+        "@microsoft.azure/autorest.testserver": "^2.10.45",
+        "@types/chai": "^4.2.7",
+        "@types/mocha": "^5.2.5",
+        "@types/node": "10.17.0",
+        "@typescript-eslint/eslint-plugin": "^4.11.1",
+        "@typescript-eslint/parser": "^4.11.0",
+        "bufferutil": "^4.0.1",
+        "chai": "^4.3.0",
+        "cpy-cli": "^2.0.0",
+        "del-cli": "^3.0.0",
+        "eslint": "^7.16.0",
+        "eslint-config-standard": "^16.0.2",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^4.2.1",
+        "mocha": "^5.2.0",
+        "mocha-typescript": "^1.1.17",
+        "node-yaml": "^3.2.0",
+        "nyc": "^15.0.0",
+        "source-map-support": "^0.5.13",
+        "ts-node": "^9.1.1",
+        "typescript": "^3.9.7",
+        "utf-8-validate": "^5.0.2"
+    },
+    "dependencies": {
+        "@azure-tools/async-io": "3.0.209",
+        "@azure-tools/autorest-extension-base": "3.1.235",
+        "@azure-tools/codegen": "2.5.276",
+        "@azure-tools/codemodel": "4.13.325",
+        "@azure-tools/linq": "3.1.232",
+        "autorest": "^3.0.6336",
+        "await-exec": "^0.1.2",
+        "compare-versions": "^3.6.0",
+        "dir-compare": "^2.2.0",
+        "eslint-config-prettier": "^7.1.0",
+        "eslint-plugin-prettier": "^3.3.1",
+        "js-yaml": "^3.13.1",
+        "jszip-sync": "^3.2.1-sync",
+        "node-yaml": "^3.2.0",
+        "nunjucks": "^3.2.2",
+        "prettier": "^2.2.1",
+        "request": "^2.87.0",
+        "request-promise-native": "1.0.8"
+    },
+    "files": [
+        "dist"
+    ]
 }
