--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   },
   "scripts": {
     "start": "node dist/src/index.js",
-    "postinstall": "mkdirp dist && cpy python dist/ --parents && node dist/python/setup.js dist/python/install.py",
+    "postinstall": "mkdirp dist && cpy src/python/* dist/ --parents && tsc dist/src/python/setup.ts && node dist/src/python/setup.js dist/src/python/install.py",
     "debug": "node --max_old_space_size=4096 --inspect-brk ./dist/src/index.js",
     "eslint-fix": "eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/ --fix",
     "eslint": "eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/ --quiet",
     "build": "npm run eslint && tsc",
-    "postbuild": "cpy templates ../dist/src --cwd=src/ --parents",
+    "postbuild": "cpy templates ../dist/src --cwd=src/ --parents && cpy python/*.py python/requirements.txt ../dist/src --cwd=src/ --parents",
     "start-testserver": "start-autorest-testserver",
     "stop-testserver": "stop-autorest-testserver",
     "watch": "tsc -p . --watch",
@@ -63,9 +63,9 @@
     "@azure-tools/autorest-extension-base": "3.1.235",
     "@azure-tools/codegen": "2.5.276",
     "@azure-tools/codemodel": "4.13.325",
-    "@azure-tools/extension": "^3.1.269",
+    "@azure-tools/extension": "3.1.269",
     "@azure-tools/linq": "3.1.232",
-    "autorest": "^3.0.6336",
+    "autorest": "3.0.6187",
     "await-exec": "^0.1.2",
     "compare-versions": "^3.6.0",
     "dir-compare": "^2.2.0",
@@ -81,7 +81,6 @@
   },
   "files": [
     "dist/src",
-    "dist/test",
-    "dist/python"
+    "dist/test"
   ]
 }
