--- a/tools/autoconfig/package.json
+++ b/tools/autoconfig/package.json
@@ -38,7 +38,8 @@
     "@autorest/clicommon": "^0.6.0",
     "@azure-tools/autorest-extension-base": "~3.1.0",
     "@azure-tools/codemodel": "^4.13.349",
-    "node-yaml": "^3.2.0"
+    "node-yaml": "^3.2.0",
+    "typescript": "^4.1.3"
   },
   "files": [
     "dist",
