--- a/azure-pipelines/ci.yml
+++ b/azure-pipelines/ci.yml
@@ -8,7 +8,17 @@ variables:
   parallelTest: 'true'
 
 jobs:
-
+  - job: ESLint
+    pool:
+      vmImage: 'vs2017-win2016'
+    steps:
+      - task: Npm@1
+        displayName: 'npm install'
+        inputs:
+          verbose: false
+      - script: 'node_modules\.bin\eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/'
+        displayName: 'eslint'
+        
   - job: Build
     strategy:
       matrix:
