--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "eslint-fix": "eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/ --fix",
     "eslint": "eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/ --quiet",
     "build": "npm run eslint && tsc",
-    "postbuild": "cpy templates ../dist/src --cwd=src/ --parents && cpy python/*.py python/requirements.txt ../dist/src --cwd=src/ --parents",
+    "postbuild": "cpy templates ../dist/src --cwd=src/ --parents && cpy python/install.py python/venvtools.py python/requirements.txt ../dist/src --cwd=src/ --parents",
     "start-testserver": "start-autorest-testserver",
     "stop-testserver": "stop-autorest-testserver",
     "watch": "tsc -p . --watch",
@@ -66,7 +66,7 @@
     "@azure-tools/codemodel": "4.13.325",
     "@azure-tools/extension": "3.1.269",
     "@azure-tools/linq": "3.1.232",
-    "autorest": "3.0.6187",
+    "autorest": "3.0.6336",
     "await-exec": "^0.1.2",
     "compare-versions": "^3.6.0",
     "dir-compare": "^2.2.0",
