--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   },
   "scripts": {
     "start": "node dist/src/index.js",
+    "postinstall": "mkdirp dist && cpy src/python/* dist/ --parents && tsc dist/src/python/setup.ts && node dist/src/python/setup.js dist/src/python/install.py",
     "debug": "node --max_old_space_size=4096 --inspect-brk ./dist/src/index.js",
     "eslint-fix": "eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/ --fix",
     "eslint": "eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/ --quiet",
     "build": "npm run eslint && tsc",
-    "postbuild": "cpy templates ../dist/src --cwd=src/ --parents",
-    "start-testserver": "./node_modules/.bin/start-autorest-testserver",
-    "stop-testserver": "./node_modules/.bin/stop-autorest-testserver",
+    "postbuild": "cpy templates ../dist/src --cwd=src/ --parents && cpy python/install.py python/venvtools.py python/requirements.txt ../dist/src --cwd=src/ --parents",
+    "start-testserver": "start-autorest-testserver",
+    "stop-testserver": "stop-autorest-testserver",
     "watch": "tsc -p . --watch",
     "prepare": "npm run build",
     "test": "npm run build && mocha dist/test --recursive",
@@ -62,8 +63,9 @@
     "@azure-tools/autorest-extension-base": "3.1.235",
     "@azure-tools/codegen": "2.5.276",
     "@azure-tools/codemodel": "4.13.325",
+    "@azure-tools/extension": "3.1.269",
     "@azure-tools/linq": "3.1.232",
-    "autorest": "^3.0.6336",
+    "autorest": "3.0.6336",
     "await-exec": "^0.1.2",
     "compare-versions": "^3.6.0",
     "dir-compare": "^2.2.0",
@@ -78,6 +80,7 @@
     "request-promise-native": "1.0.8"
   },
   "files": [
-    "dist"
+    "dist/src",
+    "dist/test"
   ]
 }
