--- a/azure-pipelines/ci.yml
+++ b/azure-pipelines/ci.yml
@@ -27,7 +27,7 @@ jobs:
         mac:
           imageName: 'macos-latest'
         windows:
-          imageName: 'windows-latest'
+          imageName: 'windows-2019'
     pool:
       vmImage: $(imageName)
       pythonVersion: '3.6'
@@ -62,7 +62,7 @@ jobs:
         mac:
           imageName: 'macos-latest'
         windows:
-          imageName: 'windows-latest'
+          imageName: 'windows-2019'
     pool:
       vmImage: $(imageName)
       pythonVersion: '3.6'
@@ -93,7 +93,7 @@ jobs:
         mac:
           imageName: 'macos-latest'
         windows:
-          imageName: 'windows-latest'
+          imageName: 'windows-2019'
     pool:
       vmImage: $(imageName)
       pythonVersion: '3.6'
