--- a/azure-pipelines/ci.yml
+++ b/azure-pipelines/ci.yml
@@ -5,7 +5,7 @@ variables:
   NodeVersion: '13.x'
   VAR_BUILD_ARTIFACT_STAGING_DIRECTORY: $(Build.ArtifactStagingDirectory)
   VAR_ARIFACT_NAME: "drop"
-  parallelTest: 'true'
+  parallelTest: false
 
 jobs:
   - job: ESLint
@@ -27,7 +27,7 @@ jobs:
         mac:
           imageName: 'macos-latest'
         windows:
-          imageName: 'windows-2019'
+          imageName: 'windows-latest'
     pool:
       vmImage: $(imageName)
       pythonVersion: '3.6'
@@ -62,7 +62,7 @@ jobs:
         mac:
           imageName: 'macos-latest'
         windows:
-          imageName: 'windows-2019'
+          imageName: 'windows-latest'
     pool:
       vmImage: $(imageName)
       pythonVersion: '3.6'
@@ -93,7 +93,7 @@ jobs:
         mac:
           imageName: 'macos-latest'
         windows:
-          imageName: 'windows-2019'
+          imageName: 'windows-latest'
     pool:
       vmImage: $(imageName)
       pythonVersion: '3.6'
