--- a/package.json
+++ b/package.json
@@ -52,13 +52,11 @@
     "nyc": "^15.0.0",
     "source-map-support": "^0.5.13",
     "typescript": "^3.7.5",
-    "utf-8-validate": "^5.0.2",
-    "cpy-cli": "^2.0.0",
-    "del-cli": "^3.0.0"
+    "utf-8-validate": "^5.0.2"
   },
   "dependencies": {
     "@azure-tools/async-io": "3.0.209",
-    "@azure-tools/autorest-extension-base": "3.1.235",
+    "@autorest/extension-base": "3.2.0",
     "@azure-tools/codegen": "2.5.276",
     "@azure-tools/codemodel": "4.13.325",
     "@azure-tools/extension": "3.1.269",
@@ -77,7 +75,10 @@
     "request": "^2.87.0",
     "request-promise-native": "1.0.8",
     "@types/mocha": "^5.2.5",
-    "@types/node": "10.17.0"
+    "@types/node": "10.17.0",
+    "mkdirp": "1.0.4",
+    "cpy-cli": "^2.0.0",
+    "del-cli": "^3.0.0"
   },
   "files": [
     "dist/src",
