--- a/azure-pipelines/release.yml
+++ b/azure-pipelines/release.yml
@@ -126,6 +126,8 @@ stages:
           echo -e "\e[32m[$(date -u)] LOG: Start test script"
           pytest -s ../s/.scripts/e2e/testcases.py --all --az ../s --azpack $(VAR_BUILD_ARTIFACT_STAGING_DIRECTORY)/$(VAR_ARIFACT_NAME)/autorest-az-$CURRENT_VERSION.tgz --swagger ../azure-rest-api-specs --cliext ../azure-cli-extensions --testserver ../autorest.testserver --junitxml=../s/.scripts/e2e/test-results.xml
         displayName: 'Pytest'
+        env:
+          NODE_OPTIONS: --max_old_space_size=65536
       - script: |
           CURRENT_VERSION=$(node -p "require('./package.json').version")
           echo -e "\e[32m[$(date -u)] LOG: CURRENT VERSION: $CURRENT_VERSION"
