--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
         "stop-testserver": "./node_modules/.bin/stop-autorest-testserver",
         "watch": "tsc -p . --watch",
         "prepare": "npm run build",
-        "test": "npm run build && mocha --require ts-node/register test/*.ts --recursive",
-        "test-report": "npm run build && nyc mocha --require ts-node/register test --recursive",
+        "test": "npm run build && jest --forceExit --coverage --config ./jest.unittest.config.js",
+        "test-report": "npm run build && jest --ci --reporters=default --reporters=jest-junit",
         "clean": "ver > nul 2>&1 nul && npm run --silent clean-cmd || npm run --silent clean-bash",
         "clean-cmd": "if exist dist rmdir /s /q dist && exit 0 || exit 0 ",
         "clean-bash": "rm nul && rm -rf dist && exit 0 || exit 0"
@@ -35,9 +35,9 @@
     "license": "MIT",
     "devDependencies": {
         "@microsoft.azure/autorest.testserver": "^2.10.45",
-        "@types/chai": "^4.2.7",
-        "@types/mocha": "^5.2.5",
-        "@types/node": "10.17.0",
+        "@types/chai": "^4.2.14",
+        "@types/jest": "^26.0.20",
+        "@types/node": "^10.17.0",
         "@typescript-eslint/eslint-plugin": "^4.11.1",
         "@typescript-eslint/parser": "^4.11.0",
         "bufferutil": "^4.0.1",
@@ -49,11 +49,12 @@
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^4.2.1",
-        "mocha": "^5.2.0",
-        "mocha-typescript": "^1.1.17",
+        "jest": "^26.6.3",
+        "jest-junit": "^11.0.1",
         "node-yaml": "^3.2.0",
         "nyc": "^15.0.0",
         "source-map-support": "^0.5.13",
+        "ts-jest": "^26.5.0",
         "ts-node": "^9.1.1",
         "typescript": "^3.9.7",
         "utf-8-validate": "^5.0.2"
