--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
         "target": "es2016",
         "experimentalDecorators": true
     },
-    "include": ["src", "test"],
+    "include": ["src", "test", "jest.unittest.config.js"],
     "exclude": ["**/*.spec.ts"]
 }
