--- a/test/scenarios/attestation/input/test-scenarios/testDataExport.yaml
+++ b/test/scenarios/attestation/input/test-scenarios/testDataExport.yaml
@@ -7,7 +7,9 @@ testScenarios:
   - description: FakedTestScenario
     steps:
       - exampleFile: ../examples/Create_AttestationProvider.json
+        step: create attestation provider
       - exampleFile: ../examples/Update_AttestationProvider.json
+        step: create attestation provider
         replace:
           - pathInBody: tags.Property1
             to: $(storageAccountId)
