--- a/azure-pipelines/release.yml
+++ b/azure-pipelines/release.yml
@@ -89,7 +89,7 @@ stages:
           echo -e "\e[32m[$(date -u)] LOG: Clone azure-cli-extensions"
           git clone --single-branch -b master https://github.com/amecodegenbot/azure-cli-extensions.git ../azure-cli-extensions
           echo -e "\e[32m[$(date -u)] LOG: Clone autorest.testserver"
-          git clone --single-branch -b master https://github.com/Azure/autorest.testserver.git ../autorest.testserver
+          git clone --single-branch -b main https://github.com/Azure/autorest.testserver.git ../autorest.testserver
         displayName: 'Clone Branch'
       - script: |
           echo -e "\e[32m[$(date -u)] LOG: Install and upgrade Pip"
